--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to the Aliens API Testing!</h1>
+    <h1>Welcome to the Aliens API Testing</h1>
 </body>
 </html>
